# Stellar_DerivexDao

./: .env  .gitattributes  Cargo.toml  README.md  package-lock.json  package.json
OneDrive/Área de Trabalho/Stellar_DerivexDao/: .env  Cargo.toml  Token.test.js  package-lock.json
OneDrive/Área de Trabalho/Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/lib/rustlib/: manifest-rustc-x86_64-pc-windows-msvc  multirust-channel-manifest.toml
OneDrive/Área de Trabalho/Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/lib/rustlib/x86_64-pc-windows-msvc/lib/: libpanic_abort-f4717ddcac361723.rlib  libstd_detect-b521ee511095af2f.rlib
OneDrive/Área de Trabalho/Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/: complement-project-faq.html  guide-macros.html  guide-unsafe.html  guide.html  help.html
OneDrive/Área de Trabalho/Stellar_DerivexDao/Src/: dao.rs  lib.rs  main.rs  test_stellar_derivex_dao.rs
Stellar_DerivexDao/: Cargo.toml  package.json
Stellar_DerivexDao/.rustup/: settings.toml
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/lib/rustlib/: manifest-rust-std-x86_64-pc-windows-msvc
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/lib/rustlib/x86_64-pc-windows-msvc/lib/: libhashbrown-124aa6c4c6ef4b4c.rlib  libpanic_unwind-7fa781213a0698f8.rlib  libprofiler_builtins-80ffe35b34a23a79.rlib  librustc_std_workspace_alloc-c86a42f7194744c8.rlib  libsysroot-58ab08044e2d70fd.rlib  libunwind-a416069596473508.rlib  libwindows_targets-2440cb72ce7deb9b.rlib  std-2df1f22abef96888.dll.lib
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/: complement-lang-faq.html  guide-ffi.html  guide-ownership.html  guide-pointers.html  guide-strings.html  guide-tasks.html  releases.html  releases.md  settings.html  version_info.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/alloc/: index.html  macro.format.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/alloc/alloc/: fn.handle_alloc_error.html  struct.AllocError.html  struct.Layout.html  trait.Allocator.html  trait.GlobalAlloc.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/alloc/borrow/: enum.Cow.html  trait.Borrow.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/alloc/collections/: index.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/alloc/fmt/: struct.Arguments.html  struct.DebugList.html  struct.DebugMap.html  struct.DebugSet.html  struct.DebugStruct.html  struct.FromFn.html  trait.Display.html  trait.Octal.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/alloc/rc/: index.html  struct.Rc.html  struct.UniqueRc.html  struct.Weak.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/alloc/slice/: fn.from_mut.html  fn.from_raw_parts.html  fn.try_range.html  index.html  struct.ArrayChunks.html  struct.ChunkBy.html  struct.ChunksExactMut.html  struct.EscapeAscii.html  struct.RChunksExactMut.html  struct.RChunksMut.html  struct.SplitInclusiveMut.html  trait.Join.html  trait.SliceIndex.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/book/: choosing-your-guarantees.html  closures.html  concurrency.html  deref-coercions.html  ffi.html  getting-started.html  lifetimes.html  loops.html  macros.html  method-syntax.html  mutability.html  ownership.html  patterns.html  strings.html  syntax-and-semantics.html  syntax-index.html  the-stack-and-the-heap.html  traits.html  unsafe.html  unsized-types.html  vectors.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/core/: macro.assert_ne.html  macro.cfg.html  macro.cfg_match.html  macro.concat.html  macro.concat_bytes.html  macro.debug_assert_eq.html  macro.format_args.html  macro.line.html  macro.option_env.html  macro.trace_macros.html  macro.write.html  primitive.char.html  primitive.f64.html  primitive.fn.html  primitive.i128.html  primitive.i32.html  primitive.i8.html  primitive.never.html  primitive.u128.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/proc_macro/: all.html  enum.Level.html  fn.quote_span.html  index.html  struct.Group.html  struct.Ident.html  struct.Punct.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/std/: keyword.as.html  keyword.const.html  keyword.else.html  keyword.if.html  keyword.mod.html  keyword.move.html  keyword.static.html  keyword.super.html  keyword.trait.html  keyword.type.html  keyword.union.html  macro.assert_eq.html  macro.concat.html  macro.concat_bytes.html  macro.debug_assert_eq.html  macro.include.html  macro.include_str.html  macro.line.html  macro.module_path.html  macro.panic.html  macro.stringify.html  macro.trace_macros.html  macro.try.html  macro.vec.html  macro.write.html  macro.writeln.html  primitive.bool.html  primitive.char.html  primitive.f32.html  primitive.f64.html  primitive.i128.html  primitive.i16.html  primitive.i32.html  primitive.i8.html  primitive.never.html  primitive.tuple.html  primitive.u128.html  primitive.u16.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/test/: all.html  enum.ColorConfig.html  enum.NamePadding.html  enum.TestName.html  struct.Options.html  struct.TestDescAndFn.html  struct.TestId.html  struct.TestOpts.html
Stellar_DerivexDao/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/unstable-book/: index.html
Stellar_DerivexDao/.rustup/update-hashes/: stable-x86_64-pc-windows-msvc
Stellar_DerivexDao/Src/: lib.rs  main.rs
Stellar_DerivexDao/Src/Contracts/: Factory.rs  main.rs
Stellar_DerivexDao/config/: config.json
(+27945 files in other folders)
