[package]
name = "Stellar_DerivexDao"
version = "0.1.0"
authors = ["marciosouzagcm"]
description = "Projeto Stellar DerivexDao"
license = "MIT"
homepage = "(link unavailable)"
repository = "https://github.com/marciosouzagcm/Stellar_DerivexDao.git"

[dependencies]
soroban-sdk = "21.7.7" # ou a versão mais recente do SDK

# Dependências comuns (adapte conforme necessário)

serde = { version = "1.0.215", features = ["derive"] }       # Para serialização e deserialização
rand = "0.8"                                             # Para geração de números aleatórios
log = "0.4"                                              # Para logging
env_logger = "0.11.5"                                       # Para configurar logs
chrono = { version = "0.4", features = ["serde"] }       # Para manipulação de datas e horas
anyhow = "1.0"                                           # Para gestão de erros
thiserror = "2.0.3"                                        # Para definir tipos de erro customizados

[lib]
name = "Stellar_DerivexDao"
path = "src/lib.rs"

[[bin]]
name = "Stellar_DerivexDao"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }           # Para testes assíncronos