[package]
name = "stellar_derivex_dao"
version = "0.1.0"
authors = ["marciosouzagcm"]
description = "stellar_derivex_dao"
license = "MIT"
homepage = "(link unavailable)"
repository = "(link unavailable)"

[dependencies]
soroban-sdk = "21.7.7"  # ou a versão mais recente do SDK
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.3"

[lib]
name = "stellar_derivex_dao"
path = "src/lib.rs"

[[bin]]
name = "stellar_derivex_dao_bin"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["serde/derive"]