[package]
name = "stellar_derivex_dao"
version = "0.1.0"
edition = "2021"
authors = ["Marcio Souza <marciosouzagcm>"]
description = "Stellar Derivex DAO library"
license = "MIT"
homepage = "(link unavailable)"
repository = "https://github.com/marciosouzagcm/Stellar_DerivexDao.git"

[dependencies]
soroban-sdk = "21.7.7"
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.3"

[lib]
name = "stellar_derivex_dao"
path = "src/lib.rs"

[[bin]]
name = "stellar_derivex_dao"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["serde/derive"]