cargo-features = ["edition2024"]

[package]
name = "stellar_derivex_dao"
version = "1.0.0"
edition = "2024"
authors = ["Marcio Souza <marciosouzagcm>"]
description = "Biblioteca Stellar Derivex DAO para trading de derivativos descentralizados"
license = "MIT"
homepage = "(link unavailable)"
repository = "(link unavailable)"

[dependencies]
soroban-sdk = { version = "22.0.0-rc.3.2" }
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.1"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.66"
thiserror = "2.0.3"

[lib]
name = "stellar_derivex_dao"
path = "src/lib.rs"

[[bin]]
name = "stellar_derivex_dao"
path = "src/main.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["serde/derive"]